2009-10-31  Marcus Meissner  <marcus@jet.franken.de>

	* config.c: Implemented Sharpness, Capture Delay and Burst
	  Interval standard PTP properties.
	* config.c: Implemented Fuji Image Format and Release/Capture mode.

2009-10-29  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Fuji Pro S5 support. Detect FUJI vendor.
	* ptp.h: More vendor codes from i3a.org.
	* config.c: Hook up lots of PTP codes from Fuji S5 Pro.

2009-10-02  Marcus Meissner  <marcus@jet.franken.de>

	* config.c,ptp.c,ptp-pack.c: Added more EOS configuration values.
	* library.c: Made EOS preview capturing more stable.
	* config.c: Hide action commands if command is not present.

2009-09-25  Marcus Meissner  <marcus@jet.franken.de>

	* config.c: Handle different Canon EOS card target values.

2009-08-02  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: In wait_for_event do not wait for full seconds anymore.

2009-07-28  Axel Waggershauser  <awagger@web.de>

	* config.c: Unified names and values of configuration settings.

          Some of the common names have been changed, like owner -> ownername
          and exptime -> shutterspeed etc.

2009-07-24  Marcus Meissner  <marcus@jet.franken.de>

	* config.c: Add a generic PTP property setter.
	* library.c,config.c: Enable Viewfinder on demand only, not for
	  regular capture. Should fix camera-switching-off issues.

2009-07-19  Marcus Meissner  <marcus@jet.franken.de>

	* config.c: New subsection "status" for all read-only values.
	* config.c: New subsection "action" for simple camera actions.
	* library.c: Enable event mode on EOS Cameras on connect.

	* config.c: Added new "bulb" action for newer Canon EOS cameras,.

		--set-config bulb=1   to put it in Bulb mode
		--set-config bulb=0   to put it out of Bulb mode
		(--wait-event for looking where the image went or so)

2009-07-15  Axel Waggershauser  <awagger@web.de>

	* config.c: some unnecessary debuglines removed.
	* config.c: Decode EOS battery charge value.