@@ -1424,7 +1424,7 @@ add_object (Camera *camera, uint32_t handle, GPContext *context)
 static int
 camera_capture_preview (Camera *camera, CameraFile *file, GPContext *context)
 {
-	unsigned char	*data = NULL;
+	unsigned char	*data = NULL, *jpgStartPtr = NULL, *jpgEndPtr = NULL;
 	uint32_t	size = 0;
 	int ret;
 	PTPParams *params = &camera->pl->params;
@@ -1530,7 +1530,37 @@ camera_capture_preview (Camera *camera, CameraFile *file, GPContext *context)
 
 		ret = ptp_nikon_get_liveview_image (params , &data, &size);
 		if (ret == PTP_RC_OK) {
-			gp_file_append (file, (char*)data + 0x80, size - 0x80);
+			/* look for the JPEG SOI marker (0xFFD8) in data */
+			jpgStartPtr = (unsigned char*)memchr(data, 0xff, size);
+			while(jpgStartPtr && ((jpgStartPtr+1) < (data + size))) {
+				if(*(jpgStartPtr + 1) == 0xd8) { /* SOI found */
+					break;
+				} else { /* go on looking (starting at next byte) */
+					jpgStartPtr++;
+					jpgStartPtr = (unsigned char*)memchr(jpgStartPtr, '\xff', data + size - jpgStartPtr);
+				}
+			}
+			if(!jpgStartPtr) { /* no SOI -> no JPEG */
+				gp_context_error (context, _("Sorry, your Nikon camera does not seem to return a JPEG image in LiveView mode"));
+				return GP_ERROR;
+			}
+			/* if SOI found, start looking for EOI marker (0xFFD9) one byte after SOI
+			   (just to be sure we will not go beyond the end of the data array) */
+			jpgEndPtr = (unsigned char*)memchr(jpgStartPtr+1, 0xff, data+size-jpgStartPtr-1);
+			while(jpgEndPtr && ((jpgEndPtr+1) < (data + size))) {
+				if(*(jpgEndPtr + 1) == 0xd9) { /* EOI found */
+					jpgEndPtr += 2;
+					break;
+				} else { /* go on looking (starting at next byte) */
+					jpgEndPtr++;
+					jpgEndPtr = (unsigned char*)memchr(jpgEndPtr, '\xff', data + size - jpgEndPtr);
+				}
+			}
+			if(!jpgEndPtr) { /* no EOI -> no JPEG */
+				gp_context_error (context, _("Sorry, your Nikon camera does not seem to return a JPEG image in LiveView mode"));
+				return GP_ERROR;
+			}
+			gp_file_append (file, (char*)jpgStartPtr, jpgEndPtr-jpgStartPtr);
 			free (data); /* FIXME: perhaps handle the 128 byte header data too. */
 			gp_file_set_mime_type (file, GP_MIME_JPEG);     /* always */
 			/* Add an arbitrary file name so caller won't crash */
